package seng201.team0.services;

import seng201.team0.GameManager;
import seng201.team0.models.Car;
import seng201.team0.models.GameStats;
import seng201.team0.models.Purchasable;
import seng201.team0.models.Upgrade;

public class ShopService {
    // Enums
    // make it private / capital
    public enum PurchaseResult {
        SUCCESS,
        ALREADY_OWNED,
        INSUFFICIENT_FUNDS,
        EXCEEDED_CAR_OWNED_LIMIT
    }
    public enum SellResult {
        SUCCESS,
        ITEM_NOT_OWNED,
        LAST_CAR_OWNED
    }


    // Properties
    GameStats gameDB = GameManager.getGameStats();


    // Logic

    /**
     * Attempt to purchase an item and return a result to the shop's controller class depending on if
     * the user has sufficient funds, the item can be purchased or is already owned.
     * @param selectedItem refers to the currently displayed item that the user wishes to buy
     * @return the result of the purchase attempt which will affect how the shop controller class operates
     */
    public PurchaseResult buyItem(Purchasable selectedItem) {
        boolean isCar = selectedItem instanceof Car;
        boolean canPay = gameDB.getBal() >= selectedItem.getBuyingPrice(gameDB.getDifficulty().getCostMultiplier());
        if (isCar) {
            if (selectedItem.isPurchased()) {
                return PurchaseResult.ALREADY_OWNED;
            }
            if (gameDB.getCarCollectionSize() == 5) {
                return PurchaseResult.EXCEEDED_CAR_OWNED_LIMIT;
            }
        }

        if (canPay) {
            gameDB.setBal(gameDB.getBal() - selectedItem.getBuyingPrice(gameDB.getDifficulty().getCostMultiplier()));
            if (isCar) {
                gameDB.addItem(selectedItem);
                selectedItem.setPurchased(true);
                if (gameDB.getSelectedCar() == null) {
                    // If no car has been previously selected (via the Garage), will set the selected car for racing
                    // to be the first purchased car
                    gameDB.setSelectedCar((Car) selectedItem);
                }
            } else {
                if (!selectedItem.isPurchased()) {
                    gameDB.addItem(selectedItem);
                    selectedItem.setPurchased(true);
                }
                ((Upgrade)selectedItem).setNumPurchased(((Upgrade)selectedItem).getNumPurchased() + 1);
            }
            return PurchaseResult.SUCCESS;
        }
        return PurchaseResult.INSUFFICIENT_FUNDS;
    }

    /**
     * Attempt to sell an item and return a result to the shop's controller class depending on if
     * the user has purchased the item or not.
     * @param selectedItem refers to the currently displayed item that the user wishes to buy
     * @return the result of the sell attempt which will affect how the shop controller class operates
     */
    public SellResult sellItem(Purchasable selectedItem) {
        boolean isCar = selectedItem instanceof Car;
        boolean canSell = selectedItem.isPurchased();
        if (canSell) {

            if (isCar) {
                if (gameDB.getCarCollectionSize() == 1) {
                    return SellResult.LAST_CAR_OWNED;
                }

                selectedItem.setPurchased(false);
                gameDB.removeItem(selectedItem);
                gameDB.setBal(gameDB.getBal() + selectedItem.getSellingPrice());
            }

            else {
                Upgrade upgrade = (Upgrade) selectedItem;
                gameDB.setBal(gameDB.getBal() + selectedItem.getSellingPrice());
                if (upgrade.getNumPurchased() > 1) {
                    upgrade.setNumPurchased(upgrade.getNumPurchased() - 1);
                } else {
                    upgrade.setNumPurchased(0);
                    selectedItem.setPurchased(false);
                    gameDB.removeItem(selectedItem);
                }
            }
            return SellResult.SUCCESS;
        }
        return SellResult.ITEM_NOT_OWNED;
    }
}